[workspace]
members = [
    "spectral-types",
    "spectral-core",
    "matrix-decomp",
    "oracle",
    "optimization",
    "certificate",
    "spectral-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Spectral Decomposition Oracle Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/spectral-oracle/spectral-decomposition-oracle"
description = "Spectral features for MIP decomposition selection with MIPLIB 2017 census"
keywords = ["optimization", "mip", "decomposition", "spectral", "operations-research"]
categories = ["science", "mathematics"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
num-traits = "0.2"
num-complex = "0.4"
ordered-float = { version = "4.0", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.8"
crossbeam = "0.8"
indexmap = { version = "2.0", features = ["serde"] }
parking_lot = "0.12"
smallvec = { version = "1.11", features = ["serde"] }
bitflags = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
