[workspace]
resolver = "2"
members = [
    "crates/isospec-types",
    "crates/isospec-core",
    "crates/isospec-engines",
    "crates/isospec-history",
    "crates/isospec-anomaly",
    "crates/isospec-smt",
    "crates/isospec-witness",
    "crates/isospec-adapter",
    "crates/isospec-bench",
    "crates/isospec-cli",
    "crates/isospec-format",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["IsoSpec Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"
indexmap = { version = "2.1", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
crossbeam = "0.8"
rand = "0.8"
criterion = "0.5"
tempfile = "3.8"
itertools = "0.12"
bitflags = "2.4"
