[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalbound"
version = "1.0.0"
description = "Verified Worst-Case Systemic Risk Bounds via Decomposed Causal Polytope Inference with Adversarial Search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CausalBound Team"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "pgmpy>=0.0.21",
    "z3-solver>=4.12",
    "click>=8.1",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "mypy", "ruff"]

[project.scripts]
causalbound = "causalbound.cli:main"

[tool.setuptools.packages.find]
include = ["causalbound*"]
