[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmee"
version = "0.1.0"
description = "Verified Manipulation Evidence Engine — formally certified manipulation evidence via causal-Bayesian inference and adversarial evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VMEE Authors"},
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "pgmpy>=0.0.15",
    "z3-solver>=4.12",
    "click>=8.1",
    "toml>=0.10",
    "pydantic>=2.0",
    "jsonschema>=4.17",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.1",
    "mypy>=1.4",
    "ruff>=0.0.270",
]

[project.scripts]
vmee = "vmee.cli:main"

[tool.setuptools.packages.find]
include = ["vmee*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
